--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     <a class="ud-menu-scroll" href="#contact">Connect</a>
                   </li>
                   <li class="nav-item">
-                    <a class="ud-menu-scroll" href="https://news.lnbits.com/" title="LNbits news">News</a>
+                    <a href="https://news.lnbits.com/" title="LNbits news">News</a>
                   </li>
                   <li class="nav-item">
                     <a href="https://demo.lnbits.com/tipjar/4">Support
