--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
           <div class="col-xl-6 col-lg-6 col-md-8 col-sm-10">
             <div class="ud-widget">
               <h5 class="ud-widget-title">LNbits runs on:</h5>
-              <div class="col gt-md">
+              <div class="col">
                 <img src="./assets/images/hero/lightning-funding-sources.png" style="opacity: 0.8;">
               </div>
             </div>
