--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     <a class="ud-menu-scroll" href="#frameworks">Frameworks</a>
                   </li>
                   <li class="nav-item">
-                    <a class="ud-menu-scroll" href="#contact">Connect</a>
+                    <a class="ud-menu-scroll" href="#connect">Connect</a>
                   </li>
                   <li class="nav-item">
                     <a href="https://news.lnbits.com/" title="LNbits news">News</a>
