--- a/index_es.html
+++ b/index_es.html
@@ -98,7 +98,7 @@
                     <a class="ud-menu-scroll" href="#frameworks">Frameworks</a>
                   </li>
                   <li class="nav-item">
-                    <a class="ud-menu-scroll" href="#contact">Contacto</a>
+                    <a class="ud-menu-scroll" href="#connect">Contacto</a>
                   </li>
                   <li class="nav-item">
                     <a href="https://news.lnbits.com/" title="Noticias de LNbits">Noticia</a>
