Improved the getting started section layout

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     <a class="ud-menu-scroll" href="#frameworks">Frameworks</a>
                   </li>
                   <li class="nav-item">
-                    <a class="ud-menu-scroll" href="#contact">Connect</a>
+                    <a class="ud-menu-scroll" href="#getting-started">Getting Started</a>
                   </li>
                   <li class="nav-item">
                     <a href="https://news.lnbits.com/" title="LNbits news">News</a>
@@ -608,7 +608,7 @@
     <!-- ====== Pricing End ====== -->
 
     <!-- ====== FAQ Start ====== -->
-    <section id="connect" class="ud-faq">
+    <section id="getting-started" class="ud-faq">
       <div class="shape">
         <img src="assets/images/faq/shape.svg" alt="shape" />
       </div>
@@ -616,106 +616,184 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="ud-section-title text-center mx-auto">
-              <h3>Getting started:</h3>
-
-            </div>
-            <center>
-              <h3>Checkout the <a href="https://github.com/lnbits/lnbits">GitHub</a> docs,
-                <a href="https://www.youtube.com/channel/UCGXU2Ae5x5K-5aKdmKqoLYg">YouTube</a> and <a
-                  href="https://github.com/cryptoteun/awesome-lnbits">Awesome LNbits</a>.
-              </h3>
-            </center>
-          </div>
-        </div>
-      </div>
-      <br />
-      <div class="row"
-        style="max-width: 1320px;padding-right: var(--bs-gutter-x,.75rem);padding-left: var(--bs-gutter-x,.75rem);margin-right: auto;margin-left: auto;">
-        <div class="col">
-
-          <div class="ud-info-meta">
-            <h5>LNbits Community</h5>
-            <p>LNbits has an incredible community of users and developers, exchanging ideas,
-              helping each other, and extending the free and open-source software. </p>
-            <br />
-            <p>Join the telegram group <a href="https://t.me/lnbits">t.me/lnbits</a></p>
-          </div>
-        </div>
-        <div class="col">
-
-          <div class="ud-info-meta">
-            <h5>lnbits.com</h5>
-            <p>This server is maintained by a few LNbits developers as an example demo of the software.</p>
-            <br />
-            <p>Email us directly <a href="mailto:lnbits@pm.me">lnbits@pm.me</a></p>
-          </div>
-        </div>
-      </div>
-
-  </div>
-
-  </section>
-  <!-- ====== FAQ End ====== -->
-
-  <!-- ====== Footer Start ====== -->
-  <footer class="ud-footer">
-    <div class="shape shape-1">
-      <img src="assets/images/footer/shape-1.png" alt="shape" />
-    </div>
-    <div class="shape shape-2">
-      <img src="assets/images/footer/shape-2.png" alt="shape" />
-    </div>
-    <div class="shape shape-3">
-      <img src="assets/images/footer/shape-3.png" alt="shape" />
-    </div>
-    <div class="ud-footer-widgets">
-      <div class="container">
-        <div class="row">
-          <div class="col-xl-5 col-lg-4 col-md-6">
-            <div class="ud-widget">
-              <a href="/" class="ud-footer-logo">
-                <img src="assets/images/logo/logo.svg" alt="logo" />
-              </a>
-              <p class="ud-widget-desc">
-                Free Open-Source Lightning Accounts System with Extensions.
-                Run for yourself, for others, or as part of a stack.
-                LNbits extension framework makes building easy.
+              <h2>Getting started</h2>
+              <p class="ud-hero-desc">
+                Everything you need to get up and running with LNbits
               </p>
-              <ul class="ud-widget-socials">
-
-                <li>
-                  <a href="https://twitter.com/lnbits">
-                    <i class="lni lni-twitter-filled"></i>
-                  </a>
-                </li>
-              </ul>
             </div>
           </div>
+        </div>
 
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="ud-single-feature wow fadeInUp" data-wow-delay=".1s">
+              <div class="ud-feature-icon">
+                <i class="lni lni-github-original"></i>
+              </div>
+              <div class="ud-feature-content">
+                <h3 class="ud-feature-title">GitHub Docs</h3>
+                <p class="ud-feature-desc">
+                  Comprehensive documentation and guides for developers
+                </p>
+                <a href="https://github.com/lnbits/lnbits" class="ud-main-btn ud-white-btn" 
+                   style="background-color: transparent; 
+                          color: #1F2234; 
+                          border: 2px solid #1F2234;
+                          padding: 8px 20px;">
+                  Learn More <i class="lni lni-arrow-right"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="ud-single-feature wow fadeInUp" data-wow-delay=".15s">
+              <div class="ud-feature-icon">
+                <i class="lni lni-youtube"></i>
+              </div>
+              <div class="ud-feature-content">
+                <h3 class="ud-feature-title">Video Tutorials</h3>
+                <p class="ud-feature-desc">
+                  Step-by-step video guides and demonstrations
+                </p>
+                <a href="https://www.youtube.com/channel/UCGXU2Ae5x5K-5aKdmKqoLYg" class="ud-main-btn ud-white-btn" 
+                   style="background-color: transparent; 
+                          color: #1F2234; 
+                          border: 2px solid #1F2234;
+                          padding: 8px 20px;">
+                  Watch Now <i class="lni lni-youtube"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="ud-single-feature wow fadeInUp" data-wow-delay=".2s">
+              <div class="ud-feature-icon">
+                <i class="lni lni-star"></i>
+              </div>
+              <div class="ud-feature-content">
+                <h3 class="ud-feature-title">Awesome LNbits</h3>
+                <p class="ud-feature-desc">
+                  Curated list of resources, tools, and extensions
+                </p>
+                <a href="https://github.com/cryptoteun/awesome-lnbits" class="ud-main-btn ud-white-btn" 
+                   style="background-color: transparent; 
+                          color: #1F2234; 
+                          border: 2px solid #1F2234;
+                          padding: 8px 20px;">
+                  Explore <i class="lni lni-star"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
 
-          <div class="col-xl-6 col-lg-6 col-md-8 col-sm-10">
-            <div class="ud-widget">
-              <h5 class="ud-widget-title">LNbits runs on:</h5>
-              <div class="col">
-                <img src="./assets/images/hero/lightning-funding-sources.png" style="opacity: 0.8;">
+        <div class="row mt-5">
+          <div class="col-lg-6">
+            <div class="ud-single-feature wow fadeInUp" data-wow-delay=".1s">
+              <div class="ud-feature-icon">
+                <i class="lni lni-telegram-original"></i>
+              </div>
+              <div class="ud-feature-content">
+                <h3 class="ud-feature-title">LNbits Community</h3>
+                <p class="ud-feature-desc">
+                  Join our incredible community of users and developers, exchanging ideas,
+                  helping each other, and extending the free and open-source software.
+                </p>
+                <a href="https://t.me/lnbits" class="ud-main-btn ud-white-btn" 
+                   style="background-color: transparent; 
+                          color: #1F2234; 
+                          border: 2px solid #1F2234;
+                          padding: 8px 20px;">
+                  Join Telegram <i class="lni lni-telegram-original"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="ud-single-feature wow fadeInUp" data-wow-delay=".15s">
+              <div class="ud-feature-icon">
+                <i class="lni lni-envelope"></i>
+              </div>
+              <div class="ud-feature-content">
+                <h3 class="ud-feature-title">lnbits.com</h3>
+                <p class="ud-feature-desc">
+                  This server is maintained by LNbits developers as an example demo of the software.
+                  Contact us for support or questions.
+                </p>
+                <a href="mailto:lnbits@pm.me" class="ud-main-btn ud-white-btn" 
+                   style="background-color: transparent; 
+                          color: #1F2234; 
+                          border: 2px solid #1F2234;
+                          padding: 8px 20px;">
+                  Email Us <i class="lni lni-envelope"></i>
+                </a>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="ud-footer-bottom">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8">
+    </section>
+    <!-- ====== FAQ End ====== -->
 
+    <!-- ====== Footer Start ====== -->
+    <footer class="ud-footer">
+      <div class="shape shape-1">
+        <img src="assets/images/footer/shape-1.png" alt="shape" />
+      </div>
+      <div class="shape shape-2">
+        <img src="assets/images/footer/shape-2.png" alt="shape" />
+      </div>
+      <div class="shape shape-3">
+        <img src="assets/images/footer/shape-3.png" alt="shape" />
+      </div>
+      <div class="ud-footer-widgets">
+        <div class="container">
+          <div class="row">
+            <div class="col-xl-5 col-lg-4 col-md-6">
+              <div class="ud-widget">
+                <a href="/" class="ud-footer-logo">
+                  <img src="assets/images/logo/logo.svg" alt="logo" />
+                </a>
+                <p class="ud-widget-desc">
+                  Free Open-Source Lightning Accounts System with Extensions.
+                  Run for yourself, for others, or as part of a stack.
+                  LNbits extension framework makes building easy.
+                </p>
+                <ul class="ud-widget-socials">
+
+                  <li>
+                    <a href="https://twitter.com/lnbits">
+                      <i class="lni lni-twitter-filled"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+
+            <div class="col-xl-6 col-lg-6 col-md-8 col-sm-10">
+              <div class="ud-widget">
+                <h5 class="ud-widget-title">LNbits runs on:</h5>
+                <div class="col">
+                  <img src="./assets/images/hero/lightning-funding-sources.png" style="opacity: 0.8;">
+                </div>
+              </div>
+            </div>
           </div>
-
         </div>
       </div>
-    </div>
-  </footer>
-  <!-- ====== Footer End ====== -->
+      <div class="ud-footer-bottom">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8">
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- ====== Footer End ====== -->
   </div>
 
   <!-- ====== Back To Top Start ====== -->
