--- a/index_es.html
+++ b/index_es.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -420,12 +419,118 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="ud-section-title text-center mx-auto">
-              <h3>Empezando</h3>
-
+              <h2>Empezando</h2>
+              <p class="ud-hero-desc">
+                Todo lo que necesitas para comenzar con LNbits
+              </p>
             </div>
-           <center><h3>Revisa los documentos de <a href="https://github.com/lnbits/lnbits">GitHub</a>,
-            <a href="https://www.youtube.com/channel/UCGXU2Ae5x5K-5aKdmKqoLYg">YouTube</a> y <a href="https://github.com/cryptoteun/awesome-lnbits">Awesome LNbits</a>.</h3></center>
+          </div>
+        </div>
 
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="ud-single-feature wow fadeInUp" data-wow-delay=".1s">
+              <div class="ud-feature-icon">
+                <i class="lni lni-github-original"></i>
+              </div>
+              <div class="ud-feature-content">
+                <h3 class="ud-feature-title">Documentación GitHub</h3>
+                <p class="ud-feature-desc">
+                  Documentación completa y guías para desarrolladores
+                </p>
+                <a href="https://github.com/lnbits/lnbits" class="ud-main-btn ud-white-btn" 
+                   style="background-color: transparent; 
+                            color: #1F2234; 
+                            border: 2px solid #1F2234;
+                            padding: 8px 20px;">
+                  Aprende Más <i class="lni lni-arrow-right"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="ud-single-feature wow fadeInUp" data-wow-delay=".15s">
+              <div class="ud-feature-icon">
+                <i class="lni lni-youtube"></i>
+              </div>
+              <div class="ud-feature-content">
+                <h3 class="ud-feature-title">Tutoriales en Video</h3>
+                <p class="ud-feature-desc">
+                  Guías y demostraciones paso a paso en video
+                </p>
+                <a href="https://www.youtube.com/channel/UCGXU2Ae5x5K-5aKdmKqoLYg" class="ud-main-btn ud-white-btn" 
+                   style="background-color: transparent; 
+                            color: #1F2234; 
+                            border: 2px solid #1F2234;
+                            padding: 8px 20px;">
+                  Ver Ahora <i class="lni lni-youtube"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="ud-single-feature wow fadeInUp" data-wow-delay=".2s">
+              <div class="ud-feature-icon">
+                <i class="lni lni-star"></i>
+              </div>
+              <div class="ud-feature-content">
+                <h3 class="ud-feature-title">Awesome LNbits</h3>
+                <p class="ud-feature-desc">
+                  Lista curada de recursos, herramientas y extensiones
+                </p>
+                <a href="https://github.com/cryptoteun/awesome-lnbits" class="ud-main-btn ud-white-btn" 
+                   style="background-color: transparent; 
+                            color: #1F2234; 
+                            border: 2px solid #1F2234;
+                            padding: 8px 20px;">
+                  Explorar <i class="lni lni-star"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row mt-5">
+          <div class="col-lg-6">
+            <div class="ud-single-feature wow fadeInUp" data-wow-delay=".1s">
+              <div class="ud-feature-icon">
+                <i class="lni lni-telegram-original"></i>
+              </div>
+              <div class="ud-feature-content">
+                <h3 class="ud-feature-title">Comunidad LNbits</h3>
+                <p class="ud-feature-desc">
+                  Únete a nuestra increíble comunidad de usuarios y desarrolladores, intercambiando ideas,
+                  ayudándose entre sí y extendiendo el software de código abierto.
+                </p>
+                <a href="https://t.me/lnbits" class="ud-main-btn ud-white-btn" 
+                   style="background-color: transparent; 
+                            color: #1F2234; 
+                            border: 2px solid #1F2234;
+                            padding: 8px 20px;">
+                  Unirse a Telegram <i class="lni lni-telegram-original"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="ud-single-feature wow fadeInUp" data-wow-delay=".15s">
+              <div class="ud-feature-icon">
+                <i class="lni lni-envelope"></i>
+              </div>
+              <div class="ud-feature-content">
+                <h3 class="ud-feature-title">lnbits.com</h3>
+                <p class="ud-feature-desc">
+                  Este servidor está mantenido por desarrolladores de LNbits como un ejemplo demo del software.
+                  Contáctanos para soporte o preguntas.
+                </p>
+                <a href="mailto:lnbits@pm.me" class="ud-main-btn ud-white-btn" 
+                   style="background-color: transparent; 
+                            color: #1F2234; 
+                            border: 2px solid #1F2234;
+                            padding: 8px 20px;">
+                  Enviar Email <i class="lni lni-envelope"></i>
+                </a>
+              </div>
             </div>
           </div>
         </div>
