Added Telegram and Github links to side footer

--- a/index.html
+++ b/index.html
@@ -795,7 +795,16 @@
                   LNbits extension framework makes building easy.
                 </p>
                 <ul class="ud-widget-socials">
-
+                  <li>
+                    <a href="https://t.me/lnbits">
+                      <i class="lni lni-telegram-original"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://github.com/lnbits/lnbits">
+                      <i class="lni lni-github-original"></i>
+                    </a>
+                  </li>
                   <li>
                     <a href="https://twitter.com/lnbits">
                       <i class="lni lni-twitter-filled"></i>
