Added header styles to section titles

--- a/index.html
+++ b/index.html
@@ -444,7 +444,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <h2 class="q-pb-lg">Access LNbits on all your devices.</h2>
+            <div class="ud-section-title q-mb-sm">
+              <h2>Access LNbits on all your devices</h2>
+            </div>
             <div class="row">
               <div class="col-7  gt-sm" style="align-items: flex-end;display: flex;">
                 <div class="row" style="align-items: flex-end;">
@@ -468,7 +470,7 @@
                 </h6>
                 <p>
                   ✔️ Fully reactive and responsive web application
-                  <br />✔️ IOS and <a href="https://play.google.com/store/apps/details?id=com.lnbits.app#">Android</a>
+                  <br />✔️ iOS and <a href="https://play.google.com/store/apps/details?id=com.lnbits.app#">Android</a>
                   Apps (use with custom servers)
                   <br />✔️ LNbits <a
                     href="https://chromewebstore.google.com/detail/lnbits/fnldnnlngdcaeclobapjcdhdkoackcko">Chrome
@@ -495,7 +497,9 @@
 
             <div class="row">
               <div class="col">
-                <h2 class="q-pb-lg" style="color: white;">LNbits extension universe.</h2>
+                <div class="ud-section-title q-mb-sm">
+                  <h2 style="color: white;">LNbits extension universe.</h2>
+                </div>
                 <h6 class="q-pb-lg" style="color: white;">
 
                   Extend YOUR LNbits to meet YOUR needs.
@@ -525,7 +529,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <div class="ud-section-title text-center mx-auto">
+            <div class="ud-section-title">
               <h2>Bootstrap your lightning payments</h2>
               <p class="ud-hero-desc">
                 One API to rule them all.
@@ -599,7 +603,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <div class="ud-section-title text-center mx-auto">
+            <div class="ud-section-title">
               <h2>Getting started</h2>
               <p class="ud-hero-desc">
                 Everything you need to get up and running with LNbits
@@ -725,10 +729,9 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <center>
-              <h2 class="q-pb-lg" style="color: white;">Frameworks used in LNbits.</h2>
-              <br />
-            </center>
+            <div class="ud-section-title q-mb-sm">
+              <h2 style="color: white;">Frameworks used in LNbit</h2>
+              </div>
           </div>
         </div>
         <div class="q-pa-md example-row-stacked-to-horizontal">
