--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                     <a href="https://news.lnbits.com/" title="LNbits news">News</a>
                   </li>
                   <li class="nav-item">
-                    <a href="https://demo.lnbits.com/tipjar/4">Support
+                    <a href="https://demo.lnbits.com/tipjar/4">Support LNbits
                       💕</a>
                   </li>
                 </ul>
