Various layout improvements

--- a/index.html
+++ b/index.html
@@ -377,13 +377,13 @@
                   <br />LNbits core is a powerful wallet accounts system you can access on ALL your devices.
                 </h6>
                 <p>
-                  ✔️ Fully reactive and responsive web application
-                  <br />✔️ iOS and <a href="https://play.google.com/store/apps/details?id=com.lnbits.app#">Android</a>
+                  ✅ Fully reactive and responsive web application
+                  <br />✅ iOS and <a href="https://play.google.com/store/apps/details?id=com.lnbits.app#">Android</a>
                   Apps (use with custom servers)
-                  <br />✔️ LNbits <a
+                  <br />✅ LNbits <a
                     href="https://chromewebstore.google.com/detail/lnbits/fnldnnlngdcaeclobapjcdhdkoackcko">Chrome
                     extension</a> for easy online payments
-                  <br />✔️ LNbits Desktop for advanced exporting and backup features
+                  <br />✅ LNbits Desktop for advanced exporting and backup features
                 </p>
               </div>
 
@@ -437,11 +437,13 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <div class="ud-section-title">
+            <div class="ud-section-title q-mb-sm">
               <h2>Bootstrap your lightning payments</h2>
               <p class="ud-hero-desc">
-                One API to rule them all.
+                <strong>
+                  One API to rule them all.
                 <br />Runs on ANY Lighting Network funding source
+                </strong>
               </p>
             </div>
 
@@ -452,45 +454,27 @@
               <div class="col">
                 <q-list padding class="text-white q-mt-md">
                   <q-item>
-                    <q-item-section avatar>
-                      <q-icon color="pink" name="check" />
-                    </q-item-section>
-                    <q-item-section>Free and open-source</q-item-section>
+                    <q-item-section>✅ Free and open-source</q-item-section>
                   </q-item>
 
                   <q-item>
-                    <q-item-section avatar>
-                      <q-icon color="pink" name="check" />
-                    </q-item-section>
-                    <q-item-section>Real world use and hardening</q-item-section>
+                    <q-item-section>✅ Real world use and hardening</q-item-section>
                   </q-item>
 
                   <q-item>
-                    <q-item-section avatar>
-                      <q-icon color="pink" name="check" />
-                    </q-item-section>
-                    <q-item-section>Cutting edge, with new funding sources being added regularly</q-item-section>
+                    <q-item-section>✅ Cutting edge, with new funding sources being added regularly</q-item-section>
                   </q-item>
 
                   <q-item>
-                    <q-item-section avatar>
-                      <q-icon color="pink" name="check" />
-                    </q-item-section>
-                    <q-item-section>NOSTR and LNURL native: create boltcards, Nostr relays, sell Nostr NIP05 identifiers, Lightning vouchers and more.</q-item-section>
+                    <q-item-section>✅ NOSTR and LNURL native: create boltcards, Nostr relays, sell Nostr NIP05 identifiers, Lightning vouchers and more.</q-item-section>
                   </q-item>
 
                   <q-item>
-                    <q-item-section avatar>
-                      <q-icon color="pink" name="check" />
-                    </q-item-section>
-                    <q-item-section>No more refactoring code for developers; changing your funding source is trivial</q-item-section>
+                    <q-item-section>✅ No more refactoring code for developers; changing your funding source is trivial</q-item-section>
                   </q-item>
 
                   <q-item>
-                    <q-item-section avatar>
-                      <q-icon color="pink" name="check" />
-                    </q-item-section>
-                    <q-item-section>Eyes on the code; huge user and developer community keeping LNbits updated</q-item-section>
+                    <q-item-section>✅ Eyes on the code; huge user and developer community keeping LNbits updated</q-item-section>
                   </q-item>
                 </q-list>
               </div>
@@ -569,7 +553,7 @@
               <div class="ud-feature-content">
                 <h3 class="ud-feature-title">Awesome LNbits</h3>
                 <p class="ud-feature-desc">
-                  Curated list of resources, tools, and extensions
+                  A curated list of resources, tools, and extensions
                 </p>
                 <a href="https://github.com/cryptoteun/awesome-lnbits" class="ud-main-btn ud-white-btn" 
                    style="background-color: transparent; 
@@ -611,10 +595,9 @@
                 <i class="lni lni-envelope"></i>
               </div>
               <div class="ud-feature-content">
-                <h3 class="ud-feature-title">lnbits.com</h3>
+                <h3 class="ud-feature-title">LNbits Demo</h3>
                 <p class="ud-feature-desc">
-                  This server is maintained by LNbits developers as an example demo of the software.
-                  Contact us for support or questions.
+                  The demo server is maintained by LNbits for people to try out the software before running their own.
                 </p>
                 <a href="mailto:lnbits@pm.me" class="ud-main-btn ud-white-btn" 
                    style="background-color: transparent; 
@@ -638,7 +621,7 @@
         <div class="row">
           <div class="col">
             <div class="ud-section-title q-mb-sm">
-              <h2 style="color: white;">Frameworks used in LNbit</h2>
+              <h2 style="color: white;">Frameworks used in LNbits</h2>
               </div>
           </div>
         </div>
@@ -684,81 +667,7 @@
     </section>
     <!-- ====== Pricing End ====== -->
 
-    <!-- ====== Footer Start ====== -->
-    <footer class="ud-footer">
-      <div class="shape shape-1">
-        <img src="assets/images/footer/shape-1.png" alt="shape" />
-      </div>
-      <div class="shape shape-2">
-        <img src="assets/images/footer/shape-2.png" alt="shape" />
-      </div>
-      <div class="shape shape-3">
-        <img src="assets/images/footer/shape-3.png" alt="shape" />
-      </div>
-      <div class="ud-footer-widgets">
-        <div class="container">
-          <div class="row">
-            <div class="col-xl-5 col-lg-4 col-md-6">
-              <div class="ud-widget">
-                <a href="/" class="ud-footer-logo">
-                  <img src="assets/images/logo/logo.svg" alt="logo" />
-                </a>
-                <p class="ud-widget-desc">
-                  Free Open-Source Lightning Accounts System with Extensions.
-                  Run for yourself, for others, or as part of a stack.
-                  LNbits extension framework makes building easy.
-                </p>
-                <ul class="ud-widget-socials">
-                  <li>
-                    <a href="https://t.me/lnbits">
-                      <i class="lni lni-telegram-original"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="https://github.com/lnbits/lnbits">
-                      <i class="lni lni-github-original"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="https://twitter.com/lnbits">
-                      <i class="lni lni-twitter-filled"></i>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <center>
-              <h3>Checkout the <a href="https://github.com/lnbits/lnbits">GitHub</a> docs,
-                <a href="https://www.youtube.com/channel/UCGXU2Ae5x5K-5aKdmKqoLYg">YouTube</a> and <a
-                  href="https://github.com/cryptoteun/awesome-lnbits">Awesome LNbits</a>.
-              </h3>
-            </center>
-          </div>
-        </div>
-      </div>
-      <br />
-      <div class="row"
-        style="max-width: 1320px;padding-right: var(--bs-gutter-x,.75rem);padding-left: var(--bs-gutter-x,.75rem);margin-right: auto;margin-left: auto;">
-        <div class="col">
-
-          <div class="ud-info-meta">
-            <h5>LNbits Community</h5>
-            <p>LNbits has an incredible community of users and developers, exchanging ideas,
-              helping each other, and extending the free and open-source software. </p>
-            <br />
-            <p>Join the telegram group <a href="https://t.me/lnbits">t.me/lnbits</a></p>
-          </div>
-        </div>
-        <div class="col">
-
-          <div class="ud-info-meta">
-            <h5>lnbits.com</h5>
-            <p>This server is maintained by a few LNbits developers as an example demo of the software.</p>
-            <br />
-            <p>Email us directly <a href="mailto:lnbits@pm.me">lnbits@pm.me</a></p>
-          </div>
-        </div>
-      </div>
+    
 
   </div>
 
